--- a/scss/core/helper/_container.scss
+++ b/scss/core/helper/_container.scss
@@ -74,7 +74,7 @@
 //  ------------------------------------------------
 
 .container, [class^="container--"], [class*=" container--"] {
-    @extend %is--center;
+    @extend %pull--center;
     width: map-get($container-width, "desktop");
 
     // get default map
